# Rcpp

./: CMakeLists.txt  Date.cpp  README.md  RcppConfig.cmake.in  Rcpp_init.cpp  attributes.cpp  barrier.cpp  internal.h
include/: RcppCommon.h
include/Rcpp/: DataFrame.h  Date.h  Dimension.h  Environment.h  Formula.h  Function.h  longlong.h  r_cast.h  routines.h
include/Rcpp/api/meat/: Rcpp_eval.h  is.h  proxy.h
include/Rcpp/api/meat/module/: Module.h
include/Rcpp/hash/: hash.h
include/Rcpp/internal/: Exporter.h  NAComparator.h  na.h  wrap.h
include/Rcpp/macros/: macros.h
include/Rcpp/module/: Module.h  Module_Property.h
include/Rcpp/platform/: compiler.h
include/Rcpp/proxy/: RObjectMethods.h
include/Rcpp/storage/: NoProtectStorage.h  PreserveStorage.h
include/Rcpp/sugar/block/: Vectorized_Math.h
include/Rcpp/sugar/functions/: seq_along.h
include/Rcpp/traits/: is_finite.h
include/Rcpp/vector/: DimNameProxy.h  Vector.h
